[package]
name = "cogito-lab"
version = "0.1.0"
edition = "2024"
authors = ["Lucas F.Martins <dyncoch@gmail.com>"]

[dependencies]
dotenv = "0.15.0"
emojis-rs = "0.1.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
termimad = "0.33.0"
tokio = { version = "1.45.1", features = ["full"] }
